2014-09-05         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document builtin functions in FUNCTAB and in
	PROCINFO["identifiers"].
	* gawk.1: Ditto.

	Unrelated:

	* gawktexi.in: More stuff from reviewer comments.

2014-09-04         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Document that indirect calls now work on built-in
	and extension functions.
	* gawk.1: Same.

2014-09-03         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Further fixes from reviews and bug reports.

2014-09-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Corrections to walkthrough in debugger chapter.
	Thanks to David Ward <dlward134@gmail.com> for the problem report.

2014-09-01         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Add index entry for @ - @load, @include,
	and indirect function calls. Thanks to "Kenny McKormack" in
	comp.lang.awk.

2014-08-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments, and other
	bug fixes, miscellanious improvements.

2014-08-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Use a different mechanism to exclude
	exercises. Remove use of LC_ALL in an example; doesn't seem
	to be needed anymore.

2014-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Exercises are excluded from print edition.

2014-08-24         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-22         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-20         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.

2014-08-16         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Continuing on reviewer comments.
