@@ -1475,7 +1475,9 @@ There are sidebars
 scattered throughout the @value{DOCUMENT}.
 They add a more complete explanation of points that are relevant, but not likely
 to be of interest on first reading.
+@ifclear FOR_PRINT
 All appear in the index, under the heading ``sidebar.''
+@end ifclear
 
 Most of the time, the examples use complete @command{awk} programs.
 Some of the more advanced sections show only the part of the @command{awk}
@@ -1602,7 +1604,7 @@ available @command{awk} implementations.
 
 @ifset FOR_PRINT
 
-@DBREF{Copying}
+@ref{Copying},
 presents the license that covers the @command{gawk} source code.
 
 The version of this @value{DOCUMENT} distributed with @command{gawk}
@@ -1630,6 +1632,9 @@ try looking them up here.
 @uref{http://www.gnu.org/software/gawk/manual/html_node/GNU-Free-Documentation-License.html,
 The GNU FDL}
 is the license that covers this @value{DOCUMENT}.
+
+Some of the chapters have exercise sections; these have also been
+omitted from the print edition.
 @end ifset
 
 @ifclear FOR_PRINT
