@@ -1,3 +1,7 @@
+2014-09-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Minor cleanups.
+
 2014-09-05         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawktexi.in: Document builtin functions in FUNCTAB and in
